--- a/css/style.css
+++ b/css/style.css
@@ -368,7 +368,8 @@ input[type="radio"].visually-hidden {
 	background-color: #f6b5a5;
 }
 
-.navigation-menu__link--current {            
+.navigation-menu__link--current,
+.navigation-menu__link--current:hover {            
 	background-color: #d07058;
 }  
 
@@ -553,9 +554,18 @@ input[type="radio"].visually-hidden {
 	padding-left: 5px;
 }
 .breadcrumbs__link {
-	background-image: linear-gradient(transparent 15px, rgba(255, 255, 255, 0.2) 0px);
+	position: relative;
 }
 
+.breadcrumbs__link:before {
+	content: "";
+
+	position: absolute;
+	bottom: 0px;
+	width: 100%;
+	height: 1px;
+	background: rgba(255, 255, 255, 0.2);
+}
 .conteiner-time {
 	display: flex;
 }
@@ -1130,7 +1140,8 @@ input[type="radio"].visually-hidden {
 
                  /* внутренняя*/
 
-.user-nav__list--basket-full:hover .purchase-wrap {
+.user-nav__list--basket-full:hover .purchase-wrap,
+.btn-basket:focus .purchase-wrap {
 	display: block;
 } 
 
@@ -1283,11 +1294,12 @@ input[type="radio"].visually-hidden {
 }
 
 .catalog-form {
-	display: flex;
-	flex-wrap: wrap;
-	align-items: flex-end;
-
 	margin-bottom: 25px;
+}
+
+.catalog-form-container {
+	display: flex;
+	align-items: flex-end;
 }
 .catalog-form-block {
 	margin-left: 0;
@@ -1397,6 +1409,7 @@ input[type="radio"].visually-hidden {
 .catalog-form-item--radio {
 	box-sizing: border-box;
 	padding: 9px 9px;
+	display: flex;
 }
 
 .catalog-input-filler,
@@ -1407,7 +1420,7 @@ input[type="radio"].visually-hidden {
 
 .label-fat {
 	padding-left: 35px;
-	margin-right: 11px;
+	margin-right: 14px;
     
 	position: relative;
 }
@@ -1455,11 +1468,12 @@ input[type="radio"].visually-hidden {
 
 .catalog-form-item--checkbox {
 	padding: 9px 2px 9px 11px;
+	display: flex;
 }
 
 .label-filler {
 	padding-left: 35px;
-	margin-right: 15px;
+	margin-right: 19px;
 
 	position: relative;
 }
@@ -1494,7 +1508,7 @@ input[type="radio"].visually-hidden {
 }
 
 .form-btn {
-	margin: 0;
+	margin: 0 0 15px 0;
 	padding: 7px 27px;
 	margin-bottom: 15px;
 
@@ -1621,6 +1635,7 @@ input[type="radio"].visually-hidden {
 
 	position: absolute;
 	top: 56px;
+	left: 0;
 }
 
               /*модальное окно*/ 
